--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "author": "Stasembo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
-  }
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "mssql": "^4.1.0",
+    "node-fetch": "^2.2.0",
+    "xml2js": "^0.4.19",
+    "xmlbuilder": "^10.0.0"
+  },
+  "devDependencies": {}
 }
