--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payment-gateway",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -12,11 +12,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "morgan": "^1.9.0",
-    "mssql": "^4.1.0",
+    "log4js": "^3.0.5",
+    "mssql": "^4.2.1",
     "node-fetch": "^2.2.0",
     "sequelize": "^4.39.0",
     "sqlite3": "^4.0.2",
+    "tedious": "2.2.4",
     "xml2js": "^0.4.19",
     "xmlbuilder": "^10.0.0"
   },
