--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "xml2js": "^0.4.19",
     "xmlbuilder": "^10.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^6.1.0"
+  }
 }
