--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payment-gateway",
-  "version": "0.4.3",
+  "version": "0.5.0",
   "description": "App for connect bank and billing system",
   "main": "app.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "log4js": "^6.1.2",
     "mssql": "^4.3.8",
