--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "mssql": "^6.3.1",
     "node-fetch": "^2.6.1",
     "sequelize": "^6.3.5",
-    "sqlite3": "^4.2.0",
-    "tedious": "9.2.3",
+    "sqlite3": "^5.0.1",
+    "tedious": "^9.2.3",
     "xml2js": "^0.4.23",
     "xmlbuilder": "^15.1.1"
   },
