--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payment-gateway",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "App for connect bank and billing system",
   "main": "app.js",
   "scripts": {
@@ -10,18 +10,19 @@
   "author": "Stasembo",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "log4js": "^6.3.0",
     "mssql": "^6.3.2",
-    "node-fetch": "^2.6.1",
-    "sequelize": "^6.6.2",
+    "node-fetch": "^2.6.5",
+    "sequelize": "^6.8.0",
     "sqlite3": "^5.0.2",
-    "tedious": "^9.2.3",
+    "tedious": "^11.8.0",
     "xml2js": "^0.4.23",
     "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {
-    "eslint": "^7.29.0"
+    "eslint": "^7.32.0"
   }
 }
